# tutils

./: .gitignore  404.html  LICENSE.md  __init__.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs_deploy_ghpage.yml  release.yaml  test.yaml
1thang_js/: gas_ip_logger.js
_docs/: api.md  config.md  general.md  index.md  io.md  path.md  sth2sth.md
_docs/1thang_js/: gas_ip_logger.js
_docs/_overrides/partials/: main.html
_docs/_script/: fetch_js.py
_extra_theme/extra_css/: font_size.css  full_width.css
_sitedocs/: general.md  index.md
_sitedocs/_overrides/partials/: main.html
api/: index.html
assets/javascripts/: bundle.3c0853e7.min.js  bundle.3c0853e7.min.js.map
assets/stylesheets/: main.bc3117d7.min.css  main.bc3117d7.min.css.map
config/: index.html
docs_site/: index.md
io/: index.html
path/: index.html
pkg/: index.html
search/: search_index.json
sth2sth/: index.html
thautils/: __init__.py  check_installation.py  general_utils.py
thautils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
thutil/: __init__.py  __version.py  _version.py  config.py  general.py  io.py  load_data.py  path.py  path_tool.py  pkg.py  pkg_tool.py  sth2sth.py  stuff.py  text.py
thutils/: check_installation.py
