[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "thutil"
dynamic = ["version"]
description = "General utilities for Python"
authors = [{ name = "C.Thang Nguyen", email = "thangckt@gmail.com" }]
license = { file = "LICENSE.md" }

dependencies = []

requires-python = ">=3.7"

### to use: pip install thamd[euler]
[project.optional-dependencies]
# llm = ['google-generativeai']


[tool.setuptools_scm]
version_file = "thutil/_version.py"

[tool.setuptools.packages.find]
include = ["thutil*"]
exclude = ["dev_tool*", "docs_site*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long
    "F841",   # local variable is assigned to but never used
    "E741",   # ambiguous variable name
    "E402",   # module level import not at top of file
    "D413",   # missing blank line after last section
    "D416",   # section name should end with a colon
    "D203",   # 1 blank line required before class docstring
    "D107",   # missing docstring in __init__
    "D213",   # multi-line docstring summary should start at the second line
    "D100",   # TODO: missing docstring in public module
    "D101",   # TODO: missing docstring in public class
    "D102",   # TODO: missing docstring in public method
    "D103",   # TODO: missing docstring in public function
    "D104",   # TODO: missing docstring in public package
    "D105",   # TODO: missing docstring in magic method
    "D205",   # 1 blank line required between summary line and description
    "D401",   # TODO: first line should be in imperative mood
    "D404",   # TODO: first word of the docstring should not be This
    "ERA001", #
    "ANN100", # Missing type annotation for function argument
    "PTH123", # open() should be replaced with Path().open()
]


[tool.setuptools.package-data]
# thutil = ['_cookie_file/*']
