[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "thutil"
dynamic = ["version"]
description = "General utilities for Python"
authors = [{ name = "C.Thang Nguyen", email = "thangckt@gmail.com" }]
license = { file = "LICENSE.md" }

dependencies = ['pyyaml', 'requests', "cerberus"]

requires-python = ">=3.7"

### to use: pip install thmd[euler]
[project.optional-dependencies]
# llm = ['google-generativeai']


[tool.setuptools_scm]
write_to = "thutil/__version.py"
fallback_version = "0.1"

[tool.setuptools.packages.find]
include = ["thutil*"]
exclude = ["dev_tool*", "docs_site*"]


[tool.setuptools.package-data]
# thutil = ['_cookie_file/*']
